<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <!--无图-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/menu_no_pic_area"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_widthPercent="20%w"
        android:orientation="vertical">

     <ImageView
         android:id="@+id/no_pic_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_marginTopPercent="15%h"
         app:layout_widthPercent="60%w"
         app:layout_heightPercent="35%h"
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/has_pic"
         android:scaleType="fitCenter"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/menu_no_pic"
         android:textSize="13dp"
         android:layout_gravity="center_horizontal"
         app:layout_marginTopPercent="10%h"/>

    </com.zhy.android.percent.support.PercentLinearLayout>


    <!--书签历史-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/menu_hisormark_area"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_widthPercent="20%w"
        android:orientation="vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_marginTopPercent="15%h"
            app:layout_widthPercent="60%w"
            app:layout_heightPercent="35%h"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/history"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hisOrMark"
            android:textSize="13dp"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="10%h"/>

    </com.zhy.android.percent.support.PercentLinearLayout>

    <!--添加书签-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/menu_add_mark"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_widthPercent="20%w"
        android:orientation="vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_marginTopPercent="15%h"
            app:layout_widthPercent="60%w"
            app:layout_heightPercent="35%h"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/bookmark"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMark"
            android:textSize="13dp"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="10%h"/>

    </com.zhy.android.percent.support.PercentLinearLayout>

    <!--刷新-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/menu_refresh"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_widthPercent="20%w"
        android:orientation="vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_marginTopPercent="15%h"
            app:layout_widthPercent="60%w"
            app:layout_heightPercent="35%h"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/refresh"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:textSize="13dp"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="10%h"/>

    </com.zhy.android.percent.support.PercentLinearLayout>

    <!--退出-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/menu_exit"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_widthPercent="20%w"
        android:orientation="vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_marginTopPercent="15%h"
            app:layout_widthPercent="60%w"
            app:layout_heightPercent="35%h"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/exit"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="13dp"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="10%h"/>

    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/down_area"
    android:background="@drawable/click_ripple">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/down"
        android:layout_centerInParent="true" />

</RelativeLayout>

</com.zhy.android.percent.support.PercentLinearLayout>